third_party/rust/chromium_crates_io/vendor/zerocopy-0.8.23/tests/ui-msrv/diagnostic-not-implemented-from-bytes.stderr
error[E0277]: the trait bound `NotZerocopy: zerocopy::FromBytes` is not satisfied
  --> tests/ui-msrv/diagnostic-not-implemented-from-bytes.rs:18:24
   |
18 |     takes_from_bytes::<NotZerocopy>();
   |                        ^^^^^^^^^^^ the trait `zerocopy::FromBytes` is not implemented for `NotZerocopy`
   |
note: required by a bound in `takes_from_bytes`
  --> tests/ui-msrv/diagnostic-not-implemented-from-bytes.rs:21:24
   |
21 | fn takes_from_bytes<T: FromBytes>() {}
   |                        ^^^^^^^^^ required by this bound in `takes_from_bytes`
